@@ -1,4 +1,4 @@
-$Id: HISTORY,v 1.1622 2007-06-20 14:25:13 debug Exp $
+$Id: HISTORY,v 1.1623 2007-06-23 17:38:52 debug Exp $
 
 Changelog for GXemul:
 ---------------------
@@ -3636,3 +3636,7 @@ Changelog for GXemul:
 		subdir (for everything that is console or framebuffer related).
 		Moving src/symbol*.c into a new src/symbol/, which should
 		contain anything that is symbol handling related.
+20070624	Making the program counter sampling threshold a "settings
+		variable" (sampling_threshold), i.e. it can now be changed
+		during runtime.
+		Switching the RELEASE notes format from plain text to HTML.
